...
                    .scaledToFit()

                HStack {
                    Text(stateModel.title)
                        .font(.small)
                        .foregroundColor(.text)
                        .accessibilityIdentifier("CategoryTitle")
                    Spacer()
                    Image(systemName: "chevron.right")
                        .font(.headline.bold())
                        .foregroundColor(.accentColor)
                }
                .padding(.small)
...
