...
                        .foregroundColor(.white)
                        .font(.caption.weight(.black))
                } else {
                    Image(systemName: "plus")
                        .foregroundColor(.white)
                        .font(.caption.weight(.black))
                        .accessibilityIdentifier("ItemAddAction")
                }
            }
            .padding(.xSmall)
            .onTapGesture {
                onItemSelected?(stateModel.id)
            }
...
